--- a/website/public/index.html
+++ b/website/public/index.html
@@ -87,7 +87,7 @@ function imageClick(url) {
         <a href="/install" class="gc-analytics-event" title="Install" data-category="Site-Wide Custom Events" data-label="Tab: Install" > Install </a>
         </tab>
          <tab dropdown>
-  <a href="/learn" class="gc-analytics-event" title="Learn" data-category="Site-Wide Custom Events" data-label="Tab: Learn" > Learn </a>
+  <a href="/getting-started" class="gc-analytics-event" title="Learn" data-category="Site-Wide Custom Events" data-label="Tab: Learn" > Learn </a>
   <a href="#"
      aria-haspopup="true"
      aria-expanded="false"
@@ -100,39 +100,29 @@ function imageClick(url) {
               <div class="devsite-tabs-dropdown-column">
                       <ul class="devsite-tabs-dropdown-section">
                       <li class="devsite-nav-item">
-                      <a title="Introduction" href="/learn">Introduction
-                      <div class="devsite-nav-item-description"> New to TensorFlow?</div>
+                      <a title="Introduction" href="/getting-started">Introduction
+                      <div class="devsite-nav-item-description"> New to MLIR?</div>
                       </a>
                       </li>
                       <li class="devsite-nav-item">
-                  <a title="TensorFlow" href="/overview">TensorFlow
-                      <div class="devsite-nav-item-description">The core open source ML library
+                  <a title="MLIR-FAQ" href="/faq">FAQ
+                      <div class="devsite-nav-item-description">Frequently Asked Questions
                       </div>
                       </a>
-                </li>
-                              <li class="devsite-nav-item">
-                  <a title="For JavaScript" href="/js" >For JavaScript
+                      </li>
+                      <li class="devsite-nav-item">
+                  <a title="Tutorials" href="https://github.com/tensorflow/mlir/tree/master/examples/toy" >Tutorial
                    <div class="devsite-nav-item-description">
-                      TensorFlow.js for ML using JavaScript
+                     Toy Tutorial
                     </div>
                   </a>
                 </li>
                   <li class="devsite-nav-item">
-                  <a title="For Mobile &amp; IoT" href="/lite" >For Mobile &amp; IoT
+                  <a title="Glossary" href="/glossary" >Glossary
                   <div class="devsite-nav-item-description">
-                      TensorFlow Lite for mobile and embedded devices
+                     Glossary
                   </div>
                    </a>
-                </li>
-                  <li class="devsite-nav-item">
-                  <a title="For Production" href="/tfx">For Production
-                    <div class="devsite-nav-item-description">
-                      TensorFlow Extended for end-to-end ML components
-                    </div>
-                  </a>
-                </li>
-                  <li class="devsite-nav-item">
-                  <a title="Swift for TensorFlow (in beta)" href="/swift">Swift for TensorFlow (in beta) </a>
                 </li>
                   </ul>
                   </div>
@@ -659,28 +649,72 @@ function imageClick(url) {
 	<main>
         <header>
         <link rel="stylesheet" href="/css/canvas.css" type="text/css">
-         <h1>MLIR unifies the infrastructure for high-performance ML models in TensorFlow.</h1>
+         <h1>Multi-Level Intermediate Representation Overview</h1>
         </header>
-        <p>The MLIR project defines a common intermediate representation (IR) that unifies the infrastructure required to execute high performance machine learning models in TensorFlow and similar ML frameworks. This project will include the application of HPC techniques, along with integration of search algorithms like reinforcement learning. MLIR aims to reduce the cost to bring up new hardware, and improve usability for existing TensorFlow users.
-<br/>
-<br/>
-<br/>
-<div>
-<iframe width="275px" height="250px" src="https://www.youtube.com/embed/qzljG6DKgic" frameborder="0"></iframe>
-<img width="425px" height="375px" src="tf-logo-card-16x9_480.png" alt="Read the blog" onclick="imageClick('http://www.google.com')"/>
-<img width="425px" height="375px" src="github-card-16x9_480.png" alt="Go to GitHub" onclick="imageClick('http://www.google.com')"/>
-<div>
-<br/>
-<br/>
-<br/>
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!
-Hello Hugo world! No more excuses for having no blog or documentation now!</p>
+        
+
+<p>The MLIR project aims to define a common intermediate representation (IR) that
+will unify the infrastructure required to execute high performance machine
+learning models in TensorFlow and similar ML frameworks. This project will
+include the application of HPC techniques, along with integration of search
+algorithms like reinforcement learning. This project aims to reduce the cost to
+bring up new hardware, and improve usability for existing TensorFlow users.</p>
+
+<p>Note that this repository contains the core of the MLIR framework. The
+TensorFlow compilers we are building on top of MLIR will be part of the
+main TensorFlow repository soon.</p>
+
+<h2 id="what-is-mlir-for">What is MLIR for?</h2>
+
+<p>MLIR is intended to be a hybrid IR which can support multiple different
+requirements in a unified infrastructure. For example, this includes:</p>
+
+<ul>
+<li>The ability to represent all TensorFlow graphs, including dynamic shapes,
+the user-extensible op ecosystem, TensorFlow variables, etc.</li>
+<li>Optimizations and transformations typically done on a TensorFlow graph, e.g.
+in Grappler.</li>
+<li>Quantization and other graph transformations done on a TensorFlow graph or
+the TF Lite representation.</li>
+<li>Representation of kernels for ML operations in a form suitable for
+optimization.</li>
+<li>Ability to host high-performance-computing-style loop optimizations across
+kernels (fusion, loop interchange, tiling, etc) and to transform memory
+layouts of data.</li>
+<li>Code generation &ldquo;lowering&rdquo; transformations such as DMA insertion, explicit
+cache management, memory tiling, and vectorization for 1D and 2D register
+architectures.</li>
+<li>Ability to represent target-specific operations, e.g. the MXU on TPUs.</li>
+</ul>
+
+<p>MLIR is a common IR that also supports hardware specific operations. Thus,
+any investment into the infrastructure surrounding MLIR (e.g. the compiler
+passes that work on it) should yield good returns; many targets can use that
+infrastructure and will benefit from it.</p>
+
+<p>MLIR is a powerful representation, but it also has non-goals. We do not try to
+support low level machine code generation algorithms (like register allocation
+and instruction scheduling). They are a better fit for lower level optimizers
+(such as LLVM). Also, we do not intend MLIR to be a source language that
+end-users would themselves write kernels in (analogous to CUDA C++). While we
+would love to see a kernel language happen someday, that will be an independent
+project that compiles down to MLIR.</p>
+
+<h2 id="compiler-infrastructure">Compiler infrastructure</h2>
+
+<p>We benefited from experience gained from building other IRs (HLO, LLVM and SIL)
+when building MLIR. We will directly adopt existing best practices, e.g. writing
+and maintaining an IR spec, building an IR verifier, providing the ability to
+dump and parse MLIR files to text, writing extensive unit tests with the
+<a href="https://llvm.org/docs/CommandGuide/FileCheck.html">FileCheck</a> tool, and
+building the infrastructure as a set of modular libraries that can be combined
+in new ways. We plan to use the infrastructure developed by the XLA team for
+performance analysis and benchmarking.</p>
+
+<p>Other lessons have been incorporated and integrated into the design in subtle
+ways. For example, LLVM has non-obvious design mistakes that prevent a
+multithreaded compiler from working on multiple functions in an LLVM module at
+the same time. MLIR solves these problems by having per-function constant pools
+and by making references explicit with <code>function_ref</code>.</p>
 
 	</main>
