updates to the website

--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@ function imageClick(url) {
         <div class="devsite-header-upper-tabs">
         <devsite-tabs class="upper-tabs">
         <div class="devsite-tabs-wrapper">
-        <tab>
-        <a href="/install" class="gc-analytics-event" title="Install" data-category="Site-Wide Custom Events" data-label="Tab: Install" > Install </a>
-        </tab>
          <tab dropdown>
   <a href="/getting-started" class="gc-analytics-event" title="Learn" data-category="Site-Wide Custom Events" data-label="Tab: Learn" > Learn </a>
   <a href="#"
@@ -128,43 +125,8 @@ function imageClick(url) {
                   </div>
           </div>
   </div>
-</tab> <tab dropdown>
-  <a href="/api" class="gc-analytics-event" title="API" data-category="Site-Wide Custom Events" data-label="Tab: API" > API
-</a>
-  <a href="#"
-     aria-haspopup="true"
-     aria-expanded="false"
-     aria-label="Toggle menu"
-     role="button"
-     class="devsite-tabs-dropdown-toggle devsite-icon devsite-icon-arrow-drop-down"></a>
-
-  <div class="devsite-tabs-dropdown" aria-hidden="true" aria-label="submenu">
-        <div class="devsite-tabs-dropdown-content">
-              <div class="devsite-tabs-dropdown-column ">
-                      <ul class="devsite-tabs-dropdown-section ">
-                              <li class="devsite-nav-title">API</li>
-                              <li class="devsite-nav-item">
-                  <a title="r2.0 (stable)" href="/api/stable">r2.0 (stable)
-                  </a>
-                </li>
-                  </ul>
-                  </div>
-              <div class="devsite-tabs-dropdown-column">
-                      <ul class="devsite-tabs-dropdown-section">
-                      <li class="devsite-nav-title">API r1</li>
-                      <li class="devsite-nav-item">
-                  <a title="r1.15" href="/api/r1.15">r1.15
-                  </a>
-                </li>
-                <li class="devsite-nav-item">
-                  <a title="More…" href="/versions">More…
-                  </a>
-                </li>
-                </ul>
-                  </div>
-          </div>
-  </div>
-</tab> <tab dropdown>
+</tab> 
+  <tab dropdown>
   <a href="/resources/models-datasets"
    class="gc-analytics-event"
    title="Resources" data-category="Site-Wide Custom Events" data-label="Tab: Resources"> Resources </a>
@@ -216,35 +178,7 @@ function imageClick(url) {
        <a href="/community" class="gc-analytics-event" title="Community" data-category="Site-Wide Custom Events" data-label="Tab: Community">
   Community
 </a>
-     </tab> <tab dropdown>
-  <a href="/about"
-   class="gc-analytics-event"
-   title="Why TensorFlow"
-           data-category="Site-Wide Custom Events"
-        data-label="Tab: Why TensorFlow"> Why TensorFlow
-</a>
-  <a href="#" aria-haspopup="true" aria-expanded="false" aria-label="Toggle menu" role="button"
-     class="devsite-tabs-dropdown-toggle devsite-icon devsite-icon-arrow-drop-down"></a>
-
-  <div class="devsite-tabs-dropdown" aria-hidden="true" aria-label="submenu">
-        <div class="devsite-tabs-dropdown-content">
-              <div class="devsite-tabs-dropdown-column">
-                      <ul class="devsite-tabs-dropdown-section">
-                      <li class="devsite-nav-item">
-                  <a title="About"
-                     href="/about" >About </a>
-                </li>
-                              <li class="devsite-nav-item">
-                  <a title="Case studies" href="/about/case-studies" >Case studies </a>
-                </li>
-                 <li class="devsite-nav-item">
-                  <a title="Trusted Partner Program" href="/trusted-partners" >Trusted Partner Program </a>
-                </li>
-                          </ul>
-                  </div>
-          </div>
-  </div>
-</tab>
+     </tab>
                   </div>
   </devsite-tabs>
 
